bin/testsuite/tests/compiler/src/errors/compiler5107.swg
#global testerror "Err0561"

struct A {}
impl A
{
    mtd opIndex() {}
}
